# logviewer-rs

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: app.rs  core.rs  lib.rs  localization.rs  logging.rs  main.rs  ui.rs
src/config/: loader.rs  schema.rs
src/core/: models.rs  parser.rs  parser_registry.rs
src/io/: local.rs
src/ui/: tui.rs
tests/: parser_tests.rs
