[package]
name = "logviewer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
ratatui = "0.29"
crossterm = "0.29"
ssh2 = "0.9"
directories = "6"
fluent-bundle = "0.16"
toml ="0.9"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
